--- a/estilos/social.css
+++ b/estilos/social.css
@@ -1,2 +1,20 @@
 @charset "UTF-8";
 
+*{
+    margin: 0px;
+    padding: 0px;
+}
+::-webkit-scrollbar{
+    width: 0px;
+    height: 0px;
+}
+img{
+    width: 266px;
+}
+a{
+    display: block;
+    background-color: darkred;
+    padding: 20px;
+    text-align: center;
+    color: white;
+}
